[project]
name = "code-graph"
version = "0.1.0"
description = "Code Knowledge Graph — AST-based code indexing with Neo4j and MCP"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.0",
    "neo4j>=5.25.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
